4.0.6 (YYYY-MM-DD)
------------------

Enhancements
 - [web] create card from sender or recipient address (#3002, #4610)

Bug fixes
 - [web] fixed all-day event dates with different timezone
 - [web] fixed display of Bcc header (#4642)
 - [core] ignore transparent events in time conflict validation (#4539)

4.0.5 (2019-01-09)
------------------

New features
 - [web] dynamic stylesheet for printing calendars (#3768)

Enhancements
 - [web] show source addressbook of matching contacts in appointment editor (#4579)
 - [web] improve display of keyboard shortcuts
 - [web] show time for messages of yesterday (#4599)
 - [web] fit month view to window size (#4554)
 - [web] updated CKEditor to version 4.11.1
 - [web] updated Angular Material to version 1.1.12

Bug fixes
 - [sogo-tool] fixed "manage-acl unsubscribe" command (#4591)
 - [web] fixed handling of collapsed/expanded mail accounts (#4541)
 - [web] fixed handling of duplicate recipients (#4597)
 - [web] fixed folder export when XSRF validation is enabled (#4502)
 - [web] don't encode filename extension when exporting folders
 - [web] fixed download of HTML body parts
 - [web] catch possible exception when registering mailto protocol
 - [core] don't always fetch the sorting columns
 - [eas] strip '<>' from bodyId and when forwarding mails
 - [eas] fix search on for Outlook application (#4605 and #4607)
 - [eas] improve search operations and results fetching
 - [eas] better handle bogus DTStart values
 - [eas] support for basic UserInformation queries (#4614)
 - [eas] better handle timezone changes (#4624)

4.0.4 (2018-10-23)
------------------

Bug fixes
 - [web] fixed time conflict validation when not the owner
 - [web] fixed freebusy display with default theme (#4578)

4.0.3 (2018-10-17)
------------------

Enhancements
 - [web] prohibit subscribing a user with no rights
 - [web] new button to mark a task as completed (#4531)
 - [web] new button to reset Calendar categories to defaults